# actionsheets-streamlit

./: .gitignore  LICENSE  README.md  app.py  data.py  events.py  pyproject.toml  requirements.txt  sidebar.py  ui.py
.run/: streamlit.run.xml
.streamlit/: config.toml  style.css
views/: home_view.py  landing.py  sheet.py  sheet_view.py  sheets_view.py  structure_view.py
